# aula_ci-cd

./: pyproject.toml
.github/workflows/: ci-cd.yml
tests/: test_jogo.py
